--- a/about-us.htm
+++ b/about-us.htm
@@ -151,16 +151,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-v2ray.htm" title="免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-node-subscribe.htm" title="免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe.htm" title="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share-links.htm" title="免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" title="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享">免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-subscribe-node.htm" title="免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-node-subscribe.htm" title="免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-node-share.htm" title="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-high-speed-nodes.htm" title="免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-v2ray.htm" title="免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-node-share-links.htm" title="免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -172,7 +172,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
