--- a/free-nodes/2025-11-2-free-v2ray-subscribe.htm
+++ b/free-nodes/2025-11-2-free-v2ray-subscribe.htm
@@ -165,17 +165,18 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="clearfix"></div>
 <div class="col-md-12 mt-5">
         <p>上一个：<a href="/free-nodes/2025-11-1-free-high-speed-nodes.htm">免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享</a></p>
+        <p>下一个：<a href="/free-nodes/2025-11-3-clash-v2ray-ss-ssr.htm">免费Clash SSR - 11月3日19.3M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享</a></p>
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>WinXray 的 PAC 模式适合什么场景？</h5></div>
+    <div class="panel-heading"><h5>SSR 的混淆和协议组合如何选择？</h5></div>
     <div class="panel-body">
-        PAC 模式通过 JavaScript 文件动态判断哪些流量走代理，哪些直连。适合访问国内外混合网站环境，用户无需手动切换节点即可根据规则自动分流。<hr />    </div>
+        根据网络封锁情况选择适合的混淆和协议组合，例如 tls1.2_ticket_auth 模拟 HTTPS 流量。不同组合对抗 DPI 和封锁能力不同，需要测试后选择最稳定和高效的方案。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Mellow 如何配置透明代理？</h5></div>
+    <div class="panel-heading"><h5>Quantumult X 支持 VLESS 吗？</h5></div>
     <div class="panel-body">
-        Mellow 的透明代理功能可通过 TUN 模式或 WinDivert 实现。启用后系统流量会自动通过代理转发，无需手动设置浏览器代理，适合全局科学上网场景。<hr />    </div>
+        Quantumult X 目前官方未原生支持 VLESS，但通过手动修改配置或第三方脚本可实现兼容。若主要使用 VLESS 协议，可考虑使用 Sing-box 或 Shadowrocket 作为替代。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 如何实现延迟最低节点自动切换？</h5></div>
@@ -183,19 +184,19 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         WinXray 支持节点延迟检测和策略组配置，可自动将流量切换至延迟最低的节点。用户无需手动选择，提高游戏、视频和网页访问速度及稳定性，优化整体网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
+    <div class="panel-heading"><h5>PassWall2 的“节点切换策略”如何配置？</h5></div>
+    <div class="panel-body">
+        在 PassWall2 中可设置多节点策略，如“按延迟排序”、“自动选择最快节点”等。程序会定期测速，根据实时数据自动切换线路，保证连接的稳定性和速度。<hr />    </div>
+</div>
+<div class="panel panel-default">
     <div class="panel-heading"><h5>Mihomo 的节点分类功能有哪些好处？</h5></div>
     <div class="panel-body">
         节点分类可以按地区、延迟或用途分组，结合策略组实现自动分流。这样可以快速选择最佳节点，管理大量节点更加高效，同时提升访问速度和稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 的混淆和协议组合如何选择？</h5></div>
+    <div class="panel-heading"><h5>Mellow 如何配置透明代理？</h5></div>
     <div class="panel-body">
-        根据网络封锁情况选择适合的混淆和协议组合，例如 tls1.2_ticket_auth 模拟 HTTPS 流量。不同组合对抗 DPI 和封锁能力不同，需要测试后选择最稳定和高效的方案。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>PassWall2 的“节点切换策略”如何配置？</h5></div>
-    <div class="panel-body">
-        在 PassWall2 中可设置多节点策略，如“按延迟排序”、“自动选择最快节点”等。程序会定期测速，根据实时数据自动切换线路，保证连接的稳定性和速度。<hr />    </div>
+        Mellow 的透明代理功能可通过 TUN 模式或 WinDivert 实现。启用后系统流量会自动通过代理转发，无需手动设置浏览器代理，适合全局科学上网场景。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Surfboard 与 Clash 有什么关系？</h5></div>
@@ -208,14 +209,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         UUID 应使用标准的 128 位格式，可使用系统命令如 `uuidgen` 或在线 UUID 生成器生成随机、唯一的 ID；不要使用默认或弱随机值，定期更换以降低被滥用或泄露的风险。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 协议如何配置优化抗封锁？</h5></div>
+    <div class="panel-heading"><h5>WinXray 的 PAC 模式适合什么场景？</h5></div>
     <div class="panel-body">
-        SSR 可通过选择合适协议、混淆方式和端口来降低被检测风险。合理配置可增强节点隐蔽性，提高长期稳定性，确保科学上网体验顺畅且可靠。<hr />    </div>
+        PAC 模式通过 JavaScript 文件动态判断哪些流量走代理，哪些直连。适合访问国内外混合网站环境，用户无需手动切换节点即可根据规则自动分流。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Quantumult X 支持 VLESS 吗？</h5></div>
+    <div class="panel-heading"><h5>SSR 协议如何配置优化抗封锁？</h5></div>
     <div class="panel-body">
-        Quantumult X 目前官方未原生支持 VLESS，但通过手动修改配置或第三方脚本可实现兼容。若主要使用 VLESS 协议，可考虑使用 Sing-box 或 Shadowrocket 作为替代。    </div>
+        SSR 可通过选择合适协议、混淆方式和端口来降低被检测风险。合理配置可增强节点隐蔽性，提高长期稳定性，确保科学上网体验顺畅且可靠。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -244,15 +245,15 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-v2ray.htm" title="免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-high-speed-nodes.htm" title="免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-node-subscribe.htm" title="免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-node-share-links.htm" title="免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-26-free-high-speed-nodes.htm" title="免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-v2ray.htm" title="免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-31-free-high-speed-nodes.htm" title="免费Clash SSR - 10月31日21.4M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月31日21.4M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-23-node-share-links.htm" title="免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
                     </ul>
     </div>
@@ -265,7 +266,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
